# cs302-process-memory-tracker

./: .gitignore  CMakeLists.txt  FinalReport.md  FinalReport_withGUI.md  README.md
memcheck/: CMakeLists.txt  README.md
memcheck/UIdesign/: UItest.py  dialog1.py  main.py  test1.py  test1.ui  testOS.py
memcheck/assemble/: test_c.asm  test_cpp.asm
memcheck/inc/: file_handler_node.h  file_handler_type.h  main_log.h  main_redirect.h  memory_node.h  trace.h
memcheck/ref/: back.c  c_test.c  mem.c  mem.h  op.cpp
memcheck/script/: run
memcheck/src/: fdnode.cpp  fdnode.h  file_descriptor_log.cpp  file_descriptor_node.cpp  file_descriptor_node.h  file_descriptor_redirect.c  file_handler_log.cpp  file_handler_node.cpp  file_handler_node.h  file_handler_redirect.c  file_handler_type.c  logger.cpp  logger.h  main_log.c  main_log.h  main_redirect.c  main_redirect.h  memnode.cpp  memnode.h  memory_log.cpp  memory_node.cpp  memory_node.h  memory_redirect.c  redirect.c  redirect.h  test.c  trace.cpp  trace.h  tt.cpp
memcheck/test/: line.cpp  mat.c  mat.cpp  open.cpp  pipe.c  test.c  test.cpp  test_args.c  test_py
process_monitor/: install.sh  process_monior.py  process_monitor.py  process_monitor_GUI.py  process_monitor_GUI.ui  uninstall.sh
process_monitor/test/: test_cpu_usage.py
src/: abc.c  back.c  op.cpp  run.cpp  tt.cpp
